fix: pass SonarQube quality gate for coverage and violations
- rag-common: declare jacoco plugin so coverage data is produced
- align sonar.coverage.exclusions with parent POM jacoco excludes
- cover error/cancel/disconnect paths in ChatGateway, ChatWebSocketHandler,
  InteractiveShell, ModuleLifecycleManager, ConversationService, VectorStore
- resolve S1186/S131/S106 and remaining rule violations